# python-testing

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  justfile  pyproject.toml
.github/workflows/: ci.yaml
python_testing/ch1/: test_01.py
tests/: test_python_testing.py
tests/ch2/: test_card.py  test_card_fail.py  test_card_fail_alt.py  test_exceptions.py  test_experiment.py  test_helper.py
