[tool.poetry]
name = "python-testing"
version = "0.1.0"
description = ""
authors = ["difegam <difegam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-select = ["B", "BLE","C4","ERA","I","ICN","INP","ISC","N","PGH","PTH","PIE","PL","Q","RET","RSE","RUF","S","SIM","T20","TCH","TID","YTT","DJ","UP"]
ignore = [ "E402","E501","B008","UP035","N818"]
fixable = ["E","F","W","F","C","B","Q","I001","Q000"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]