[tool.poetry]
name = "python-testing"
version = "0.1.0"
description = ""
authors = ["difegam <difegam@gmail.com>"]
readme="README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "7.3.*"
pre-commit = "^3.3.3"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-select = ["B", "BLE","C4","ERA","I","ICN","INP","ISC","N","PGH","PTH","PIE","PL","Q","RET","RSE","RUF","S","SIM","T20","TCH","TID","YTT","DJ","UP"]
ignore = [ "E402","E501","B008","UP035","N818"]
fixable = ["E","F","W","F","C","B","Q","I001","Q000"]
extend-exclude = ["tests"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
