[project]
name = "python-testing"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]


[tool.ruff]
target-version = "py313"
line-length = 100
extend-select = [
    "B",
    "BLE",
    "C4",
    "ERA",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PTH",
    "PIE",
    "PL",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TID",
    "YTT",
    "DJ",
    "UP",
]
ignore = ["E402", "E501", "B008", "UP035", "N818"]
fixable = ["E", "F", "W", "C", "B", "Q", "I001", "Q000"]
extend-exclude = ["tests"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
